# bar_rs

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  TODO.md
assets/models/: armbull_blue.glb  armbull_red.glb  armcom_blue.glb  armcom_red.glb  armdrag_blue.glb  armdrag_red.glb  armflash_blue.glb  armflash_red.glb  armham_blue.glb  armham_red.glb  armlab_blue.glb  armlab_red.glb  armllt_blue.glb  armllt_red.glb  armmex_blue.glb  armmex_red.glb  armpeep_blue.glb  armpeep_red.glb  armrad_blue.glb  armrad_red.glb  armsolar_blue.glb  armsolar_red.glb  armstump_blue.glb  armstump_red.glb
src/: main.rs  networking.rs  setup.rs  spawning.rs  types.rs
src/systems/: ai.rs  animation.rs  combat.rs  economy.rs  environment.rs  input.rs  mod.rs  movement.rs  pathfinding.rs  visuals.rs
tools/: convert_s3o.py  download_sounds.py  view_model.html
