[package]
name = "bar_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.18.0"
bevy_renet2 = { version = "0.13.1", features = ["serde", "native_transport"] }
bincode = { version = "2", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
